--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "author": "Muhammad Nur Rizqi Saputra",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
-    "nodemon": "^3.1.7"
+    "moment": "^2.30.1",
+    "nodemon": "^3.1.7",
+    "pino": "^9.4.0",
+    "pino-pretty": "^11.2.2"
   }
 }
