--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "joi": "^17.13.3",
     "moment": "^2.30.1",
     "nodemon": "^3.1.7",
     "pino": "^9.4.0",
